# FOB

./: .gitattributes  .gitignore  LICENSE  README.md  README_datasets.md  benchmark_runner.py  dataset_setup.py  environment.yml  evaluate_experiment.py  example_experiment.yaml  experiment.yaml  experiment_runner.py  fix_folder_names.py  hpo_with_smac.py  pyproject.toml  requirements.txt  run_adamcpr_imagenet.sh  run_adamw_imagenet.sh  setup.py  submission_runner.py  suite_generator.py  yaml_parsing_example.ipynb
baselines/: README.md  classification.yaml  classification_small-adamcpr_paper.yaml  classification_small.yaml  create_plots.sh  graph.yaml  graph_tiny.yaml  mnist.yaml  plot.yaml  sbatch_template.sh  segmentation.yaml  tabular.yaml  translation.yaml
benchopt_benchmark/: .gitignore  README.rst  objective.py
bob/: runtime.py
datasets/: README.md  dataset_setup.py
engine/: __init__.py  callbacks.py  configs.py  default.yaml  engine.py  grid_search.py  parameter_groups.py  parser.py  run.py  run_schedulers.py  slurm.py  utils.py
evaluation/: README.md  README_plot.md  __init__.py  default.yaml  labels.yaml  plot.py
examples/: .gitignore
icml_related/: instructions.md  submission.py
optimizers/: README.md
pytorch_fob/: __init__.py  dataset_setup.py  evaluate_experiment.py  run_experiment.py
runtime/: __init__.py  args.py  callbacks.py  configs.py  default.yaml  grid_search.py  parameter_groups.py  runtime.py  specs.py  utils.py
submissions/: __init__.py  submissions.py
tasks/: README.md  tasks.py
workloads/: __init__.py  specs.py  (+1 more)
(+423 files in other folders)
